# green-bin

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  alembic.ini  atlas.hcl  dockerfile  entrypoint.sh  pyproject.toml
backend/app/: .env.example  app.py  config.py
backend/app/AI/: pipeline.py  test.py  train.py
backend/app/AI/app/AI/model/: config.json
backend/app/AI/app/AI/results/checkpoint-150/: trainer_state.json
backend/app/AI/app/AI/results/checkpoint-300/: trainer_state.json
backend/app/AI/app/AI/results/checkpoint-450/: config.json  trainer_state.json
backend/app/alembic/: env.py
backend/app/alembic/versions/: d7a9817132c4_initial_migration.py
backend/app/database/: core.py
backend/app/entities/: __init__.py  table.py
backend/app/routes/: dashboard.py  feedback.py  picture.py
backend/app/schemas/: feedback.py  picture.py
backend/app/service/: feedback.py  picture.py
frontend/: .cta.json  .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: api.ts  routeTree.gen.ts
frontend/src/components/: Header.tsx
frontend/src/components/ui/: textarea.tsx
frontend/src/routes/: $id.tsx  __root.tsx  dashboard.tsx  index.$id.tsx  index.tsx
